@startuml
'https://plantuml.com/class-diagram

abstract class Menu
Abstract Menu {
- painter: Painter
- screen: Terminal screen
- inputOptions: String
+ Menu()
+ run()
+ printMenu()
+ getGraphicMatrix()
+ getMatrixFromColors()
+ checkForInput()
+ readInput()
}

Menu<|-- StartMenu
Menu<|-- InstructionsMenu
Menu<|-- GameOverMenu

class StartMenu {
    + printMenu()
    + getGraphicMatrix()
}
class InstructionsMenu {
    + printMenu()
    + getGraphicMatrix()
}
class GameOverMenu {
    + printMenu()
    + getGraphicMatrix()
    + updateLevelAndScore()
}


@enduml